--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <exec.mainClass>motorph.gui.AppStart</exec.mainClass>
+        <exec.mainClass>view.AppStart</exec.mainClass>
     </properties>
 
     <build>
